--- a/CoopLifeMod/CoopLifeMod.vcxproj
+++ b/CoopLifeMod/CoopLifeMod.vcxproj
@@ -148,10 +148,12 @@
     <ClCompile Include="D3DHook.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Memory.cpp" />
+    <ClCompile Include="Net.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="D3DHook.h" />
     <ClInclude Include="Memory.h" />
+    <ClInclude Include="Net.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
