--- a/CoopLifeMod/CoopLifeMod.vcxproj
+++ b/CoopLifeMod/CoopLifeMod.vcxproj
@@ -150,11 +150,13 @@
     <ClCompile Include="D3DHook.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Memory.cpp" />
+    <ClCompile Include="Mods.cpp" />
     <ClCompile Include="Net.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="D3DHook.h" />
     <ClInclude Include="Memory.h" />
+    <ClInclude Include="Mods.h" />
     <ClInclude Include="Net.h" />
     <ClInclude Include="Offsets.h" />
   </ItemGroup>
