--- a/CoopLifeMod/CoopLifeMod.vcxproj.filters
+++ b/CoopLifeMod/CoopLifeMod.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClCompile Include="Net.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Mods.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Memory.h">
@@ -39,6 +42,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Offsets.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Mods.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
