add config hotkey support

--- a/CoopLifeMod/Resources/config.ini
+++ b/CoopLifeMod/Resources/config.ini
@@ -1,9 +1,11 @@
 [options]
-
-
-
 nickname = ElOne
-
-
-
 ip = 90.4.94.161
+
+[keys]
+host = F1
+join = F2
+solo = F3
+toggle = F8
+statup = PGUP
+statdown = PGDOWN
