add more keys support & draw speed

--- a/CoopLifeMod/Resources/config.ini
+++ b/CoopLifeMod/Resources/config.ini
@@ -1,9 +1,9 @@
 [options]
 nickname = ElOne
-ip = 90.4.94.161
+ip = 85.171.196.216
 
 [keys]
-host = F1
+host = I
 join = F2
 solo = F3
 toggle = F8
