--- a/CoopLifeMod/Resources/config.ini
+++ b/CoopLifeMod/Resources/config.ini
@@ -1,11 +1,19 @@
 [options]
-nickname = ElOne
-ip = 90.4.94.161
+
+nickname = Klaoude
+
+ip = 90.4.254.67
 
 [keys]
+
 host = F1
+
 join = F2
+
 solo = F3
+
 toggle = F8
+
 statup = PGUP
+
 statdown = PGDOWN
