add decimals from ini

--- a/CoopLifeMod/Resources/config.ini
+++ b/CoopLifeMod/Resources/config.ini
@@ -3,9 +3,17 @@ nickname = ElOne
 ip = 85.171.196.216
 
 [keys]
-host = I
+host = F1
 join = F2
 solo = F3
 toggle = F8
 statup = PGUP
 statdown = PGDOWN
+
+[decimals]
+damage = 0
+attackSpeed = 1
+crit = 2
+regen = 3
+strength = 2
+speed = 1
