--- a/CoopLifeMod/Resources/config.ini
+++ b/CoopLifeMod/Resources/config.ini
@@ -17,3 +17,11 @@ crit = 2
 regen = 3
 strength = 2
 speed = 1
+
+[index]
+damage = 1
+attackSpeed = 2
+crit = 4
+regen = 0
+strength = 0
+speed = 3
