add leaf drop chance

--- a/CoopLifeMod/Resources/config.ini
+++ b/CoopLifeMod/Resources/config.ini
@@ -17,11 +17,14 @@ crit = 2
 regen = 3
 strength = 2
 speed = 1
+cloverChance = 0
+
 
 [index]
 damage = 1
 attackSpeed = 2
-crit = 4
-regen = 0
-strength = 0
-speed = 3
+crit = 3
+regen = 4
+strength = 5
+speed = 6
+cloverChance = 7
